--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,18 @@
 
   <!-- https://mvnrepository.com/artifact/io.reactivex/rxjava -->
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava -->
+    <dependency>
+      <groupId>io.reactivex.rxjava2</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>2.1.9</version>
+    </dependency>
+<!--
     <dependency>
       <groupId>io.reactivex</groupId>
       <artifactId>rxjava</artifactId>
       <version>1.3.5</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
